--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "build": "npx @nestjs/cli build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npx @nestjs/cli start",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
