--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/terminus": "^10.1.1",
     "@prisma/client": "^5.5.2",
     "ai": "^2.2.20",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -52,6 +53,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.8.9",
